# Hack02_Phase05

./: .dockerignore  .env.local  .flake8  .gitignore  .helmignore  BEST_PRACTICES_PROMPTS.md  DOCKER_SETUP.md  EHackathon_TwoPhase_03frontend.env.local  PERMANENT_FIX_DOCUMENTATION.md  PostgreSQL_CONFIG.md  README.md  REGISTRATION_FIX.md  RESOLUTION_SUMMARY.md  START_HERE.bat  USER_ID_FIX.md  add_due_date_column.py  check_config_fresh.py  check_db_config.py  check_env_fresh.bat  check_env_vars.py  check_users.py  create_test_user.py  create_test_user_db.py  debug_env_loading.py  debug_registration.py  demo_calendar_functionality.py  docker-compose.dev.yml  docker-compose.yml  final_test.py  final_verification_test.py  git-push.bat  git-push.ps1  model_check.py  neon_health_check.py  neon_registration_fix.py  push.bat  pyproject.toml  requirements.txt  simple_crud_test.py  simple_openrouter_test.py  (+52 more)
backend/: .flake8  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test_config.py  todo_app.db
backend/alembic/: env.py
backend/alembic/versions/: 001_add_indexes.py
backend/docs/: api_documentation.md  quickstart.md
backend/src/: checkkey.py  config.py  database.py  main.py
backend/src/api/: auth_router.py  chat_router.py  recurring_router.py  task_router.py  tasks_v2_router.py  todo_router.py
backend/src/core/: config.py  database.py
backend/src/dapr/: client.py  pubsub.py
backend/src/database/: database.py  schema.sql
backend/src/events/: handlers.py  schemas.py
backend/src/models/: ai_config.py  conversation.py  message.py  task.py  (+4 more)
(+208 files in other folders)
